apps/kubernetes-dashboard/stripprefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kubedash-stripprefix
  namespace: kubernetes-dashboard
spec:
  stripPrefix:
    prefixes:
    - /kubedash
